--- a/wechatSample/WebRoot/WEB-INF/web.xml
+++ b/wechatSample/WebRoot/WEB-INF/web.xml
@@ -9,10 +9,21 @@
     <servlet-name>WbChat</servlet-name>
     <servlet-class>com.sample.wechat.servlet.WbChat</servlet-class>
   </servlet>
+  <servlet>
+    <description>This is the description of my J2EE component</description>
+    <display-name>This is the display name of my J2EE component</display-name>
+    <servlet-name>TokenServlet</servlet-name>
+    <servlet-class>com.sample.wechat.servlet.TokenServlet</servlet-class>
+  </servlet>
+
 
   <servlet-mapping>
     <servlet-name>WbChat</servlet-name>
     <url-pattern>/wb</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>TokenServlet</servlet-name>
+    <url-pattern>/token</url-pattern>
   </servlet-mapping>
 
 
